update:Some table loader styles bug
1. In safari, after multiple clicks , the loader still has not disappeared.
2. Loader should above the scrollbar

--- a/styles/mixins/hacks.less
+++ b/styles/mixins/hacks.less
@@ -207,3 +207,12 @@
 .ie10-visibility(@value) when (@ie-polyfill = true) {
   visibility: ~'@{value}@{ie-suffix}';
 }
+
+// Safari
+.safari-visibility(@value) {
+  @media not all and (min-resolution: 0.001dpcm) {
+    & {
+      visibility: @value;
+    }
+  }
+}
